# heavyedge

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
doc/source/: conf.py  index.rst  plot-header.py
src/: conftest.py
src/heavyedge/: __init__.py  _wasserstein.c  _wasserstein.pyx  profile.py  segreg.py  wasserstein.py
src/heavyedge/api/: __init__.py  edge.py  landmarks.py  mean.py  preprocess.py  profile.py
src/heavyedge/cli/: command.py
src/heavyedge/io/: __init__.py  profile.py  raw.py
src/heavyedge/plugins/: edge.py  mean.py  profile.py
src/heavyedge/samples/: config-prep.yml  recipes.py
tests/: conftest.py  test_commands.py  test_io.py
