[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "heavyedge"
version = "0.0.0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "Central package for heavy edge coating profile analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/heavyedge/heavyedge"
source = "https://github.com/heavyedge/heavyedge"

[project.optional-dependencies]
test = [
    "pytest",
    "tqdm",
]
doc = [
    "matplotlib",
]
dev = [
    "flake8",
    "black",
    "isort",
    "heavyedge[test,doc]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore=doc --doctest-modules --import-mode=importlib"
